Refactor ballerina test execution