@@ -18,80 +18,176 @@
 
 package org.ballerinalang.packerina.task;
 
+import com.google.gson.Gson;
 import org.ballerinalang.model.elements.PackageID;
+import org.ballerinalang.packerina.OsUtils;
 import org.ballerinalang.packerina.buildcontext.BuildContext;
 import org.ballerinalang.packerina.buildcontext.BuildContextField;
-import org.ballerinalang.testerina.core.TesterinaConstants;
+import org.ballerinalang.packerina.model.ExecutableJar;
+import org.ballerinalang.test.launcher.entity.TestSuite;
+import org.ballerinalang.test.launcher.util.TesterinaConstants;
+import org.ballerinalang.testerina.core.TesterinaRegistry;
+import org.ballerinalang.tool.LauncherUtils;
+import org.ballerinalang.tool.util.BFileUtil;
 import org.wso2.ballerinalang.compiler.tree.BLangPackage;
-import org.wso2.ballerinalang.compiler.util.ProjectDirConstants;
+import org.wso2.ballerinalang.util.Lists;
+import org.wso2.ballerinalang.util.RepoUtils;
 
+import java.io.File;
+import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.OutputStreamWriter;
+import java.io.Writer;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 
-import static org.wso2.ballerinalang.compiler.util.ProjectDirConstants.BALLERINA_HOME;
-import static org.wso2.ballerinalang.compiler.util.ProjectDirConstants.BALLERINA_HOME_BRE;
-import static org.wso2.ballerinalang.compiler.util.ProjectDirConstants.BALLERINA_HOME_LIB;
+import static org.ballerinalang.tool.LauncherUtils.createLauncherException;
+import static org.wso2.ballerinalang.compiler.util.ProjectDirConstants.BLANG_COMPILED_JAR_EXT;
+import static org.wso2.ballerinalang.compiler.util.ProjectDirConstants.TEST_RUNTIME_JAR_PREFIX;
 
 /**
  * Task for executing tests.
+ *
+ * @since 1.1.0
  */
 public class RunTestsTask implements Task {
 
+
+    private final String[] args;
+
+    public RunTestsTask(String[] args) {
+        this.args = args;
+    }
+
     @Override
     public void execute(BuildContext buildContext) {
-        Path targetDirPath = buildContext.get(BuildContextField.TARGET_DIR);
+        buildContext.out().println();
+        buildContext.out().println("Running Tests");
+        Path sourceRootPath = buildContext.get(BuildContextField.SOURCE_ROOT);
 
         List<BLangPackage> moduleBirMap = buildContext.getModules();
         // Only tests in packages are executed so default packages i.e. single bal files which has the package name
         // as "." are ignored. This is to be consistent with the "ballerina test" command which only executes tests
         // in packages.
         for (BLangPackage bLangPackage : moduleBirMap) {
-            PackageID packageID = bLangPackage.packageID;
-
-            if (!buildContext.moduleDependencyPathMap.containsKey(packageID)) {
+            if (!bLangPackage.containsTestablePkg()) {
+                buildContext.out().println();
+                buildContext.out().println("\t" + bLangPackage.packageID);
+                buildContext.out().println("\t" + "No tests found");
+                buildContext.out().println();
                 continue;
             }
-
-            // todo following is some legacy logic check if we need to do this.
-            // if (bLangPackage.containsTestablePkg()) {
-            // } else {
-            // In this package there are no tests to be executed. But we need to say to the users that
-            // there are no tests found in the package to be executed as :
-            // Running tests
-            //     <org-name>/<package-name>:<version>
-            //         No tests found
-            // }
-            Path jarPath = buildContext.getTestJarPathFromTargetCache(packageID);
-            Path modulejarPath = buildContext.getJarPathFromTargetCache(packageID);
-            Path jarFileName = modulejarPath.getFileName();
-            String moduleJarName = jarFileName != null ? jarFileName.toString() : "";
-            // subsitute test jar if module jar if tests not exists
-            if (Files.notExists(jarPath)) {
-                jarPath = modulejarPath;
+            HashSet<Path> testDependencies = getTestDependencies(buildContext, bLangPackage.packageID);
+            Path jsonPath = buildContext.getTestJsonPathTargetCache(bLangPackage.packageID);
+            createTestJson(bLangPackage, sourceRootPath, jsonPath);
+            int testResult = runTestSuit(jsonPath, buildContext, testDependencies);
+            if (testResult != 0) {
+                throw createLauncherException("there are test failures");
             }
-            readDataFromJsonAndMockTheTestSuit(moduleJarName, targetDirPath, jarPath, buildContext);
         }
     }
 
-    private void readDataFromJsonAndMockTheTestSuit(String moduleJarName, Path targetPath, Path testJarPath,
-                                                    BuildContext buildContext) {
-        Path jsonPath = targetPath.resolve(ProjectDirConstants.CACHES_DIR_NAME)
-                .resolve(ProjectDirConstants.JSON_CACHE_DIR_NAME).resolve(moduleJarName);
-        Path balDependencyPath = Paths.get(System.getProperty(BALLERINA_HOME)).resolve(BALLERINA_HOME_BRE)
-                .resolve(BALLERINA_HOME_LIB);
+    /**
+     * Extract data from the given bLangPackage.
+     *
+     * @param bLangPackage Ballerina package
+     * @param sourceRootPath Source root path
+     * @param jsonPath Path to the test json
+     */
+    private static void createTestJson(BLangPackage bLangPackage, Path sourceRootPath, Path jsonPath) {
+        String initFunctionName = bLangPackage.initFunction.name.value;
+        String startFunctionName = bLangPackage.startFunction.name.value;
+        String stopFunctionName = bLangPackage.stopFunction.name.value;
+        String testInitFunctionName = bLangPackage.getTestablePkg().initFunction.name.value;
+        String testStartFunctionName = bLangPackage.getTestablePkg().startFunction.name.value;
+        String testStopFunctionName = bLangPackage.getTestablePkg().stopFunction.name.value;
+        String orgName = bLangPackage.packageID.getOrgName().value;
+        String version = bLangPackage.packageID.getPackageVersion().value;
+        String packageName;
+        if (bLangPackage.packageID.getName().getValue().equals(".")) {
+            packageName = bLangPackage.packageID.getName().getValue();
+        } else {
+            packageName = orgName + "/" + bLangPackage.packageID.getName().value + ":" + version;
+        }
+        HashMap<String, String> normalFunctionNames = new HashMap<>();
+        HashMap<String, String> testFunctionNames = new HashMap<>();
+
+        bLangPackage.functions.forEach(function -> {
+            String functionClassName = BFileUtil.getQualifiedClassName(bLangPackage.packageID.orgName.value,
+                                                                       bLangPackage.packageID.name.value,
+                                                                       getClassName(function.pos.src.cUnitName));
+            normalFunctionNames.put(function.name.value, functionClassName);
+        });
+
+        bLangPackage.getTestablePkg().functions.forEach(function -> {
+            String functionClassName = BFileUtil.getQualifiedClassName(bLangPackage.packageID.orgName.value,
+                                                                       bLangPackage.packageID.name.value,
+                                                                       getClassName(function.pos.src.cUnitName));
+            testFunctionNames.put(function.name.value, functionClassName);
+        });
+
+        // set data
+        TestSuite suite = TesterinaRegistry.getInstance().getTestSuites().get(packageName);
+        if(suite == null){
+            suite = new TestSuite(bLangPackage.packageID.name.value, packageName, orgName, version);
+        }
+        suite.setInitFunctionName(initFunctionName);
+        suite.setStartFunctionName(startFunctionName);
+        suite.setStopFunctionName(stopFunctionName);
+        suite.setTestInitFunctionName(testInitFunctionName);
+        suite.setTestStartFunctionName(testStartFunctionName);
+        suite.setTestStopFunctionName(testStopFunctionName);
+        suite.setCallableFunctionNames(normalFunctionNames);
+        suite.setTestFunctionNames(testFunctionNames);
+        suite.setPackageName(packageName);
+        suite.setSourceRootPath(sourceRootPath.toString());
+        // write to json
+        writeToJson(suite, jsonPath);
+    }
+
+    /**
+     * return the function name.
+     *
+     * @param function String value of a function
+     * @return function name
+     */
+    private static String getClassName(String function) {
+        return function.replace(".bal", "").replace("/", ".");
+    }
+
+    /**
+     * Write the content into a json.
+     *
+     * @param testMetaData Data that are parsed to the json
+     */
+    private static void writeToJson(TestSuite testMetaData, Path jsonPath) {
+        Path tmpJsonPath = Paths.get(jsonPath.toString(), TesterinaConstants.TESTERINA_TEST_SUITE);
+        File jsonFile = new File(tmpJsonPath.toString());
+        try (Writer writer = new OutputStreamWriter(new FileOutputStream(jsonFile), StandardCharsets.UTF_8)) {
+            Gson gson = new Gson();
+            String json = gson.toJson(testMetaData);
+            writer.write(new String(json.getBytes(StandardCharsets.UTF_8), StandardCharsets.UTF_8));
+        } catch (IOException e) {
+            throw LauncherUtils.createLauncherException("couldn't read data from the Json file : " + e.toString());
+        }
+    }
+
+    private int runTestSuit(Path jsonPath, BuildContext buildContext, HashSet<Path> testDependencies) {
         String javaCommand = System.getProperty("java.command");
         String mainClassName = TesterinaConstants.TESTERINA_LAUNCHER_CLASS_NAME;
-        // TODO: remove the Djava.ext.dirs
-        String runningCommand = javaCommand + " -Djava.ext.dirs=" + balDependencyPath.toString() + " -cp "
-                + testJarPath.toString() + " " + mainClassName + " " + jsonPath.toString();
         try {
-            Process proc = Runtime.getRuntime().exec(runningCommand);
-            proc.waitFor();
+            String classPath = getClassPath(getTestRuntimeJar(buildContext), testDependencies);
+            List<String> cmdArgs = Lists.of(javaCommand, "-cp", classPath, mainClassName, jsonPath.toString());
+            cmdArgs.addAll(Arrays.asList(args));
+            ProcessBuilder processBuilder = new ProcessBuilder(cmdArgs);
+            Process proc = processBuilder.start();
+            int testResult = proc.waitFor();
 
             // Then retrieve the process output
             InputStream in = proc.getInputStream();
@@ -109,8 +205,38 @@ public class RunTestsTask implements Task {
             if (outputStreamLength > 0) {
                 buildContext.out().println(new String(c, StandardCharsets.UTF_8));
             }
+           return testResult;
         } catch (IOException | InterruptedException e) {
-            buildContext.err().println(e);
+            throw createLauncherException("unable to run the tests: " + e.getMessage());
         }
+    }
+
+    private HashSet<Path> getTestDependencies(BuildContext buildContext, PackageID packageID) {
+        Path testJarPath = buildContext.getTestJarPathFromTargetCache(packageID);
+        ExecutableJar executableJar = buildContext.moduleDependencyPathMap.get(packageID);
+        HashSet<Path> testDependencies = new HashSet<>(executableJar.moduleLibs);
+        testDependencies.addAll(executableJar.testLibs);
+        testDependencies.add(testJarPath);
+        return testDependencies;
+    }
+
+    private String getClassPath(Path testRuntimeJar, HashSet<Path> testDependencies) {
+        String separator = ":";
+        StringBuilder classPath = new StringBuilder();
+        classPath.append(testRuntimeJar);
+        if (OsUtils.isWindows()) {
+            separator = ";";
+        }
+        for (Path testDependency : testDependencies) {
+            classPath.append(separator).append(testDependency);
+        }
+        return classPath.toString();
+    }
+
+    private Path getTestRuntimeJar(BuildContext buildContext) {
+        String balHomePath = buildContext.get(BuildContextField.HOME_REPO).toString();
+        String ballerinaVersion = RepoUtils.getBallerinaVersion();
+        String runtimeJarName = TEST_RUNTIME_JAR_PREFIX + ballerinaVersion + BLANG_COMPILED_JAR_EXT;
+        return Paths.get(balHomePath, "bre", "lib", runtimeJarName);
     }
 }
